Dispatch NS_THEMECHANGED when GTK theme changes (bug 238854). r+sr=blizzard