widget/src/gtk2/nsWindow.h
@@ -182,6 +182,8 @@ public:
                                                GdkEventVisibility *aEvent);
     void               OnWindowStateEvent(GtkWidget *aWidget,
                                           GdkEventWindowState *aEvent);
+    void               OnClientEvent(GtkWidget *aWidget,
+                                     GdkEventClient *aEvent);
     gboolean           OnDragMotionEvent(GtkWidget       *aWidget,
                                          GdkDragContext  *aDragContext,
                                          gint             aX,
@@ -245,6 +247,8 @@ public:
     void               SetPluginType(PluginType aPluginType);
     void               SetNonXEmbedPluginFocus(void);
     void               LoseNonXEmbedPluginFocus(void);
+
+    void               ThemeChanged(void);
 
     Window             mOldFocusWindow;
 
